css correction on mobile

--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -12,7 +12,7 @@ body {
 .App {
   text-align: center;
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 20px;
+  padding: 10px;
 }
 
 /* Login Screen */
@@ -54,7 +54,7 @@ body {
 .filtered-combos-container {
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  margin: 10px;
 }
 
 .filtered-combos-title {
