--- a/src/assets/css/FilteredCombos.scss
+++ b/src/assets/css/FilteredCombos.scss
@@ -19,7 +19,7 @@
   width: 100%; /* Full width to contain both the info and tiles */
   max-width: 800px; /* Optional: limit the width of the container */
   justify-content: center;
-  gap: 10px; /* Space between tiles */
+  gap: 5px; /* Space between tiles */
 }
 
 .combo-info {
